Fixed hallway scroll issue and made titles a bit more readable

--- a/app/less/wall.less
+++ b/app/less/wall.less
@@ -71,14 +71,10 @@ h1 {
             left: 0;
             position: absolute;
             width: 100%;
-            //height: 500px;
-            //background-color: rgba(0, 0, 0, 0.8) !important;
 
             h1, h2 {
-                color: #fff;
+                color: @highlightColor;
                 font-weight: bolder;
-                text-shadow: #fff 0 0 2px;
-                -webkit-text-stroke: 2px #fff;
                 letter-spacing: 5px;
                 text-align: center;
             }
